--- a/codebook/tpw_references.bib
+++ b/codebook/tpw_references.bib
@@ -1,4 +1,16 @@
 
+# IBQ 
+@article{smith2013dangerous,
+  title={Dangerous safe havens: Institutional betrayal exacerbates sexual trauma},
+  author={Smith, Carly Parnitzke and Freyd, Jennifer J},
+  journal={Journal of traumatic stress},
+  volume={26},
+  number={1},
+  pages={119--124},
+  year={2013},
+  publisher={Wiley Online Library}
+}
+
 # PCT (BEQ)
 @article{saxbe2018birth,
   title={The Birth Experiences Questionnaire: A brief measure assessing psychosocial dimensions of childbirth.},
