--- a/codebook/RMD_codebook_draft_ST.Rmd
+++ b/codebook/RMD_codebook_draft_ST.Rmd
@@ -4937,11 +4937,14 @@ cts_pc_data_subset <- complete %>%
 # Calculate the summary statistics for each variable
 ## mean is showing 2 decimals per authors
 cts_pc_summary_data <- lapply(cts_pc_data_subset, function(x) {
-  x <- replace(x, x < -40, NA)
-  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  sd_val <- round(sd(x, na.rm = TRUE), 2)
-  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
-  miss_val <- round(mean(is.na(x)) * 100, 2)
+  x <- replace(x, (x < -40 & x!= -55 & x!= -88), NA)  # Your original recoding
+  x <- replace(x, (x == "-44" | x== "-77" | x== "-99"), NA)  # Additional recoding
+  # Exclude negative values and specific negative values from calculations
+  x_no_negatives <- replace(x, (x < 0 | x == -44 | x == -77 | x == -99), NA)
+  mean_val <- ifelse(all(is.na(x_no_negatives)), NA, sprintf("%.2f", round(mean(x_no_negatives, na.rm = TRUE), 2)))
+  sd_val <- ifelse(all(is.na(x_no_negatives)), NA, round(sd(x_no_negatives, na.rm = TRUE), 2))
+  range_val <- ifelse(all(is.na(x_no_negatives)), NA, paste(min(x_no_negatives, na.rm = TRUE), max(x_no_negatives, na.rm = TRUE), sep = "-"))
+  miss_val <- round(mean(is.na(x)) * 100, 2)  # Calculate missing value percentage using original x
   c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
 })
 
@@ -5049,7 +5052,9 @@ This survey was not adminstered for participants who were incarcerated at the ti
 ```{r CTS-var-prep}
 # Pull question wording from Qualtrics data
 CTS_word <- qualtrics %>% 
-  select(starts_with("CT"), -CT0, -CT000) %>% 
+  select(starts_with("CT"), -CT0, -CT000, - `CTS PARENT SCREEN`) %>% 
+  rename_with(~sub("^CT", "CTS", .), starts_with("CT")) %>%
+  rename(`CTS Screen` = `CTSS Screen`) %>%
   slice(1)
 
 #create table with variable name, description, and notes
@@ -5066,8 +5071,7 @@ CTS_word_long <- CTS_word %>%
                                if_else(var_name == "ct000", "How many new children are you parenting since your last interview on (last interview date)?",
                                        if_else(var_name ==  "cts screen", "Have you been in a (romantic) relationship in the past year?",
                                                if_else(var_name == "cts parent screen", "Have you parented a child (under 18) in the past year?", description))))
-  ) %>%
-  slice(1:26)
+  ) 
 
 ```
 
@@ -5182,17 +5186,76 @@ print(CTS_scale_table)
 Descriptive statistics are presented below for each item and subscale
 score:
 
+For binary items: 
+```{r cts-binary}
+# Create subset of cts binary items
+cts_data_subset_binary <- complete %>%
+  select(cts_screen)
+
+# Calculate the dichotomous summary statistics for each variable
+cts_summary_data_binary <- lapply(cts_data_subset_binary, function(x) {
+  per_no <- paste0(round(sum(x == 0, na.rm = TRUE) / length(x) *100, 1), "%")
+  per_yes <- paste0(round(sum(x == 1, na.rm = TRUE) / length(x) *100, 1), "%")
+  num_no <- sum(x == 0, na.rm = TRUE)
+  num_yes <-sum(x == 1, na.rm = TRUE)
+  miss_val <- round(mean(is.na(x)) * 100, 2)
+  c(per_no = per_no, per_yes = per_yes, num_no = num_no, num_yes = num_yes, Missing = paste(miss_val, "%", sep = ""))
+})
+
+# Convert summary_data to a data frame
+cts_summary_data_binary <- as.data.frame(cts_summary_data_binary)
+
+# Set items as first row
+cts_summary_data_binary <- rbind(names(cts_summary_data_binary), cts_summary_data_binary) %>% 
+  t() %>% 
+  as.data.frame()
+
+# Create the gt table
+cts_tbl_binary <- cts_summary_data_binary %>%
+  gt() %>%
+  cols_label(`1` = "Variable",
+             num_no = "N",
+             per_no = "%",
+             num_yes = "N",
+             per_yes = "%",
+             Missing = "% Missing") %>% 
+  cols_width(#everything() ~ px(115),
+             `1` ~ px(200),
+             num_no ~ px(120),
+             num_yes ~ px(120),
+             per_no ~ px(120),
+             per_yes ~ px(120)) %>%
+  cols_align(columns = c("per_no", "per_yes", "num_no", "num_yes", "Missing"), align = "center") %>% 
+  tab_spanner(label = "No", columns = c(num_no, per_no)) %>% 
+  tab_spanner(label = "Yes", columns = c(num_yes, per_yes)) %>% 
+  tab_style(style = list(cell_fill(color = "#9BB6D1")),
+            locations = cells_column_spanners()) %>% 
+  apply_tbl_theme() %>% 
+  tab_style(style = list(cell_fill(color = colorspace::lighten("#9BB6D1", .4))),
+            locations = cells_column_labels(columns = c(num_yes, num_no, per_yes, per_no))) %>%
+  tab_footnote("*% may not equal 100%; % is of total sample, not the subsample for whom these items are applicable") %>%
+  tab_options(table.width = pct(100))
+
+# Render the table
+cts_tbl_binary
+```
+
+
 ```{r CTS-mean-items}
 # Create subset of CTS items
 cts_data_subset <- complete %>%
-  select(cts1:cts20, starts_with("cts"))
+  select(cts1:cts_sex_mutual)
 
 # Calculate the summary statistics for each variable
 cts_summary_data <- lapply(cts_data_subset, function(x) {
-  mean_val <- sprintf("%.2f", round(mean(x, na.rm = TRUE), 2))
-  sd_val <- round(sd(x, na.rm = TRUE), 2)
-  range_val <- paste(min(x, na.rm = TRUE), max(x, na.rm = TRUE), sep = "-")
-  miss_val <- round(mean(is.na(x)) * 100, 2)
+  x <- replace(x, (x < -40 & x!= -55 & x!= -88), NA)  # Your original recoding
+  x <- replace(x, (x == "-44" | x== "-77" | x== "-99"), NA)  # Additional recoding
+  # Exclude negative values and specific negative values from calculations
+  x_no_negatives <- replace(x, (x < 0 | x == -44 | x == -77 | x == -99), NA)
+  mean_val <- ifelse(all(is.na(x_no_negatives)), NA, sprintf("%.2f", round(mean(x_no_negatives, na.rm = TRUE), 2)))
+  sd_val <- ifelse(all(is.na(x_no_negatives)), NA, round(sd(x_no_negatives, na.rm = TRUE), 2))
+  range_val <- ifelse(all(is.na(x_no_negatives)), NA, paste(min(x_no_negatives, na.rm = TRUE), max(x_no_negatives, na.rm = TRUE), sep = "-"))
+  miss_val <- round(mean(is.na(x)) * 100, 2)  # Calculate missing value percentage using original x
   c(Mean = mean_val, SD = sd_val, Range = range_val, Missing = paste(miss_val, "%", sep = ""))
 })
 
@@ -5230,444 +5293,6 @@ cts_tbl
 #### Distributions
 
 Distributions are presented below for each subscale
-<Maria> I'd like your input on how to abbriviate the x axix and title.
-< Min> I only want abbreviations for the continuous scores, not categorial
-
-##### Severity distributions
-
-```{r CTS-Severity-TC-distributions, class.source='fold', echo = FALSE}
-# Psychological Aggression 
-p_cts_psy_agg_ind_sev <- complete %>%
-  mutate(
-    cts_psy_agg_ind_sev = case_when(
-      cts_psy_agg_ind_sev == 0 ~ 'No Psychological Aggression',  #TODO: <Maria> Can I short this to No Psy. Aggre. etc... 
-      cts_psy_agg_ind_sev == 1 ~ 'Minor Psychological Aggression',
-      cts_psy_agg_ind_sev == 2 ~ 'Severe Psychological Aggression'
-    ),
-    cts_psy_agg_ind_sev = as.factor(cts_psy_agg_ind_sev),
-    cts_psy_agg_ind_sev = relevel(cts_psy_agg_ind_sev, 'No Psychological Aggression')
-  ) %>%
-  ggplot(
-    aes(
-      cts_psy_agg_ind_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10),guide = guide_axis(n.dodge=3)) +
-  labs(title = 'Individual (TC) Psychological Aggression Severity',
-       y = "Number of Participants") + 
-  THEME
-
-
-# Psychical Injury 
-p_cts_injury_ind_sev <- complete %>%
-  mutate(
-    cts_injury_ind_sev = case_when(
-      cts_injury_ind_sev == 0 ~ 'No Injury',
-      cts_injury_ind_sev == 1 ~ 'Minor Injury',
-      cts_injury_ind_sev == 2 ~ 'Severe Injury'
-    ),
-    cts_injury_ind_sev = as.factor(cts_injury_ind_sev),
-    cts_injury_ind_sev = relevel(cts_injury_ind_sev, 'No Injury')
-  ) %>%
-  ggplot(
-    aes(
-      cts_injury_ind_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Individual (TC) Physical Injury Severity',
-       y = "Number of Participants") + 
-  THEME
-
-# Assault 
-p_cts_assault_ind_sev <- complete %>%
-  mutate(
-    cts_assault_ind_sev = case_when(
-      cts_assault_ind_sev == 0 ~ 'No Assault',
-      cts_assault_ind_sev == 1 ~ 'Minor Assault',
-      cts_assault_ind_sev == 2 ~ 'Severe Assault'
-    ),
-    cts_assault_ind_sev = as.factor(cts_assault_ind_sev),
-    cts_assault_ind_sev = relevel(cts_assault_ind_sev, 'No Assault')
-  ) %>%
-  ggplot(
-    aes(
-      cts_assault_ind_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Individual (TC) Assault Severity',
-       y = 'Number of Participants') +
-  THEME
-
-# Sexual Cohesion
-p_cts_sex_ind_sev <- complete %>%
-  mutate(
-    cts_sex_ind_sev = case_when(
-      cts_sex_ind_sev == 0 ~ 'No Sexual Cohesion',
-      cts_sex_ind_sev == 1 ~ 'Minor Sexual Cohesion',
-      cts_sex_ind_sev == 2 ~ 'Severe Sexual Cohesion'
-    ),
-    cts_sex_ind_sev = as.factor(cts_sex_ind_sev),
-    cts_sex_ind_sev = relevel(cts_sex_ind_sev, 'No Sexual Cohesion')
-  ) %>%
-  ggplot(
-    aes(
-      cts_sex_ind_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Individual (TC) Sexual Cohesion Severity',
-       y = "Number of Participants") + 
-  THEME
-
-#TODO: <Min FIX the x axis overlap>
-ggarrange(p_cts_psy_agg_ind_sev, p_cts_injury_ind_sev + rremove("ylab"), 
-          p_cts_assault_ind_sev, p_cts_sex_ind_sev + rremove("ylab")) %>%
-  annotate_figure(top = text_grob( "Distribution for CTS Individual (TC) Serverity \n(x-axis and y-axis are in different scales)"))
-```
-
-
-
-```{r CTS-Severity-Partner-distributions, class.source='fold', echo = FALSE}
-# Psychological Aggression 
-p_cts_psy_agg_part_sev <- complete %>%
-  mutate(
-    cts_psy_agg_part_sev = case_when(
-      cts_psy_agg_part_sev == 0 ~ 'No Psychological Aggression',
-      cts_psy_agg_part_sev == 1 ~ 'Minor Psychological Aggression',
-      cts_psy_agg_part_sev == 2 ~ 'Severe Psychological Aggression'
-    ),
-    cts_psy_agg_part_sev = as.factor(cts_psy_agg_part_sev),
-    cts_psy_agg_part_sev = relevel(cts_psy_agg_part_sev, 'No Psychological Aggression')
-    ) %>%
-  ggplot(
-    aes(
-      cts_psy_agg_part_sev
-    )
-  ) +
-  bar_style +
-   scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Partner Psychological Aggression Severity',
-       y = "Number of Participants") + 
-  THEME +
-  theme(axis.text.x = element_text(angle = -45))
-
-# Physical Injury
-p_cts_injury_part_sev <- complete %>%
-  mutate(
-    cts_injury_part_sev = case_when(
-      cts_injury_part_sev == 0 ~ 'No Injury',
-      cts_injury_part_sev == 1 ~ 'Minor Injury',
-      cts_injury_part_sev == 2 ~ 'Severe Injury'
-    ),
-    cts_injury_part_sev = as.factor(cts_injury_part_sev),
-    cts_injury_part_sev = relevel(cts_injury_part_sev, 'No Injury')
-  ) %>%
-  ggplot(
-    aes(
-      cts_injury_part_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Partner Physical Injury Severity',
-       y = "Number of Participants") + 
-  THEME
-
-
-# Assault
-p_cts_assault_part_sev <- complete %>%
-  mutate(
-    cts_assault_part_sev = case_when(
-      cts_assault_part_sev == 0 ~ 'No Assault',
-      cts_assault_part_sev == 1 ~ 'Minor Assault',
-      cts_assault_part_sev == 2 ~ 'Severe Assault'
-    ),
-    cts_assault_part_sev = as.factor(cts_assault_part_sev),
-    cts_assault_part_sev = relevel(cts_assault_part_sev, 'No Assault')
-  ) %>%
-  ggplot(
-    aes(
-      cts_assault_part_sev
-    )
-  ) +
-  bar_style +
-    scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Partner Assault Severity',
-       y = "Number of Participants") + 
-  THEME
-
-# Sexual Cohesion
-p_cts_sex_part_sev <- complete %>%
-  mutate(
-    cts_sex_part_sev = case_when(
-      cts_sex_part_sev == 0 ~ 'No Sexual Cohesion',
-      cts_sex_part_sev == 1 ~ 'Minor Sexual Cohesion',
-      cts_sex_part_sev == 2 ~ 'Severe Sexual Cohesion'
-    ),
-    cts_sex_part_sev = as.factor(cts_sex_part_sev),
-    cts_sex_part_sev = relevel(cts_sex_part_sev, 'No Sexual Cohesion')
-  ) %>%
-  ggplot(
-    aes(
-      cts_sex_part_sev
-    )
-  ) +
-  bar_style +
-  scale_x_discrete(labels = label_wrap(10)) +
-  labs(title = 'Partner Sexual Cohesion Severity',
-       y = "Number of Participants") + 
-  THEME
-
-# TODO: Min fix x axis overlap 
-ggarrange(p_cts_psy_agg_part_sev, p_cts_injury_part_sev + rremove("ylab"), 
-          p_cts_assault_part_sev, p_cts_sex_part_sev + rremove("ylab")) %>%
-  annotate_figure(top = text_grob( "Distribution for CTS Partner Serverity \n(x-axis and y-axis are in different scales)"))
-```
-
-##### Prevalence distributions
-
-<MIN> TODO NA was removed when generating following Prevalence plot
-MZ note: I think NA was removed when colculate the prevalence score. 
-
-```{r CTS-Prevalence-distributions, class.source='fold', echo = FALSE}
-# Psychological Aggression 
-p_cts_psy_agg_pre <- complete %>%
-  pivot_longer(
-    cols = c(cts_psy_agg_ind_prev, cts_psy_agg_part_prev),
-    names_to = 'ind_part',
-    values_to = 'prevalence'
-  ) %>%
-  mutate(
-    ind_part = case_when(
-      ind_part == 'cts_psy_agg_ind_prev' ~ 'Individual (TC)',
-      ind_part == 'cts_psy_agg_part_prev' ~ 'Partner'
-    )
-  ) %>%
-  group_by(ind_part) %>%
-  mutate(
-    sum_prev = sum(prevalence, na.rm = T)
-  ) %>%
-  ungroup() %>%
-  ggplot(
-    aes(
-      ind_part, sum_prev
-    )
-  ) +
-  geom_col(
-    aes(fill = ind_part),
-    position = 'dodge'
-  ) +
-  labs(title = 'Psychological Aggression Prevalence') +
-  scale_fill_manual(values = Two_color) +
-  THEME
-
-# Physical Injury
-p_cts_inj_pre <- complete %>%
-  pivot_longer(
-    cols = c(cts_injury_ind_prev, cts_injury_part_prev),
-    names_to = 'ind_part',
-    values_to = 'prevalence'
-  ) %>%
-  mutate(
-    ind_part = case_when(
-      ind_part == 'cts_injury_ind_prev' ~ 'Individual (TC)',
-      ind_part == 'cts_injury_part_prev' ~ 'Partner'
-    )
-  ) %>%
-  group_by(ind_part) %>%
-  mutate(
-    sum_prev = sum(prevalence, na.rm = T)
-  ) %>%
-  ungroup() %>%
-  ggplot(
-    aes(
-      ind_part, sum_prev
-    )
-  ) +
-  geom_col(
-    aes(fill = ind_part),
-    position = 'dodge'
-  ) +
-  labs(title = 'Physical Injury Prevalence') +
-  scale_fill_manual(values = Two_color) +
-  THEME
-
-# Assault
-p_cts_ass_pre <- complete %>%
-  pivot_longer(
-    cols = c(cts_assault_ind_prev, cts_assault_part_prev),
-    names_to = 'ind_part',
-    values_to = 'prevalence'
-  ) %>%
-  mutate(
-    ind_part = case_when(
-      ind_part == 'cts_assault_ind_prev' ~ 'Individual (TC)',
-      ind_part == 'cts_assault_part_prev' ~ 'Partner'
-    )
-  ) %>%
-  group_by(ind_part) %>%
-  mutate(
-    sum_prev = sum(prevalence, na.rm = T)
-  ) %>%
-  ungroup() %>%
-  ggplot(
-    aes(
-      ind_part, sum_prev
-    )
-  ) +
-  geom_col(
-    aes(fill = ind_part),
-    position = 'dodge'
-  ) +
-  labs(title = 'Assault Prevalence') +
-  scale_fill_manual(values = Two_color) +
-  THEME
-
-# Sexual Cohesion
-p_cts_sex_pre <- complete %>%
-  pivot_longer(
-    cols = c(cts_sex_ind_prev, cts_sex_part_prev),
-    names_to = 'ind_part',
-    values_to = 'prevalence'
-  ) %>%
-  mutate(
-    ind_part = case_when(
-      ind_part == 'cts_sex_ind_prev' ~ 'Individual (TC)',
-      ind_part == 'cts_sex_part_prev' ~ 'Partner'
-    )
-  ) %>%
-  group_by(ind_part) %>%
-  mutate(
-    sum_prev = sum(prevalence, na.rm = T)
-  ) %>%
-  ungroup() %>%
-  ggplot(
-    aes(
-      ind_part, sum_prev
-    )
-  ) +
-  geom_col(
-    aes(fill = ind_part),
-    position = 'dodge'
-  ) +
-  labs(title = 'Sexual Cohesion Prevalence') +
-  scale_fill_manual(values = Two_color) +
-  THEME
-
-ggarrange(p_cts_psy_agg_pre + rremove("legend"), p_cts_inj_pre + rremove("ylab"), 
-          p_cts_ass_pre + rremove("legend"), p_cts_sex_pre + rremove("ylab")) %>%
-  annotate_figure(top = text_grob( "Distribution for CTS Prevalence \n(x-axis and y-axis are in different scales)"))
-```
-
-
-
-##### Mutuality distributions
-
-```{r CTS-Mutuality-distributions, class.source='fold', echo = FALSE}
-
-# Psychological Aggression 
-p_cts_psy_mut <- complete %>%
-  mutate(
-    cts_psy_agg_mutual = case_when(
-      cts_psy_agg_mutual == 0 ~ 'Neither',
-      cts_psy_agg_mutual == 1 ~ 'Male',
-      cts_psy_agg_mutual == 2 ~ 'Female',
-      cts_psy_agg_mutual == 3 ~ 'Both'
-    ),
-    cts_psy_agg_mutual = as.factor(cts_psy_agg_mutual),
-    cts_psy_agg_mutual = relevel(cts_psy_agg_mutual, 'Male')
-  ) %>%
-  ggplot(
-    aes(
-      cts_psy_agg_mutual
-    )
-  ) +
-  bar_style +
-  labs(title = 'Mutual Psychological Aggression',
-       y = "Number of Participants") +
-  THEME
-
-
-
-# Physical Injury
-p_cts_ing_mut <- 
-  complete %>%
-  mutate(
-    cts_injury_mutual = case_when(
-      cts_injury_mutual == 0 ~ 'Neither',
-      cts_injury_mutual == 1 ~ 'Male',
-      cts_injury_mutual == 2 ~ 'Female',
-      cts_injury_mutual == 3 ~ 'Both'
-    ),
-    cts_injury_mutual = as.factor(cts_injury_mutual),
-    cts_injury_mutual = relevel(cts_injury_mutual, 'Female')
-  ) %>%
-  ggplot(
-    aes(
-      cts_injury_mutual
-    )
-  ) +
-  bar_style +
-  labs(title = 'Mutual Physical Injury',
-       y = "Number of Participants") +
-  THEME
-
-
-# Assault
-p_cts_ass_mut <- complete %>%
-  mutate(
-    cts_assault_mutual = case_when(
-      cts_assault_mutual == 0 ~ 'Neither',
-      cts_assault_mutual == 1 ~ 'Male',
-      cts_assault_mutual == 2 ~ 'Female',
-      cts_assault_mutual == 3 ~ 'Both'
-    ),
-    cts_assault_mutual = as.factor(cts_assault_mutual),
-    cts_assault_mutual = relevel(cts_assault_mutual, 'Male')
-  ) %>%
-  ggplot(
-    aes(
-      cts_assault_mutual
-    )
-  ) +
-  bar_style +
-  labs(title = 'Mutual Assault',
-       y = "Number of Participants") +
-  THEME
-
-# Sexual Cohesion
-p_cts_sex_mut <- complete %>%
-  mutate(
-    cts_sex_mutual = case_when(
-      cts_sex_mutual == 0 ~ 'Neither',
-      cts_sex_mutual == 1 ~ 'Male',
-      cts_sex_mutual == 2 ~ 'Female',
-      cts_sex_mutual == 3 ~ 'Both'
-    ),
-    cts_sex_mutual = as.factor(cts_sex_mutual),
-    cts_sex_mutual = relevel(cts_sex_mutual, 'Male')
-  ) %>%
-  ggplot(
-    aes(
-      cts_sex_mutual
-    )
-  ) +
-  bar_style +
-  labs(title = 'Mutual Sexual Cohesion',
-       y = "Number of Participants") +
-  THEME
-
-ggarrange(p_cts_psy_mut, p_cts_ing_mut + rremove("ylab"), 
-          p_cts_ass_mut, p_cts_sex_mut + rremove("ylab")) %>%
-  annotate_figure(top = text_grob( "Distribution for CTS Mutual Subscale \n(x-axis and y-axis are in different scales)"))
-```
-
 
 ##### Negotiation distributions
 
