--- a/scripts/telephone_ cleanning_Script.Rmd
+++ b/scripts/telephone_ cleanning_Script.Rmd
@@ -786,21 +786,23 @@ cts_complete <-
            cts_sex_part_prev == 0) ~ -99
       )
     )
+
 # Dropping dummy-coded variables for archive
 # pulling in original items with missing data code
 cts_complete <- cts_complete %>%
   select(-ct1_dum:-ct20_dum) %>%
-  select(id, ct1_midpoint:cts_sex_mutual) %>%
+  # We are not include midpoint variable becauey they were used to compute variable, but meaningless for analysis
+  select(id, cts_psy_agg_ind_sev:cts_sex_mutual) %>%
   merge(cts, by="id") %>%
   # reorder dataset 
-  relocate(ct1_midpoint:cts_sex_mutual, .after = "ct20") %>%
+  relocate(cts_psy_agg_ind_sev:cts_sex_mutual, .after = "ct20") %>%
   # add in -99 for midpoint ranges that cannot be computed due to -55 codes
-   mutate(
-    ct1_midpoint = if_else(is.na(ct1_midpoint), -99, ct1_midpoint),
-    ct2_midpoint = if_else(is.na(ct2_midpoint), -99, ct2_midpoint),
-    ct7_midpoint = if_else(is.na(ct7_midpoint), -99, ct7_midpoint),
-    ct8_midpoint = if_else(is.na(ct8_midpoint), -99, ct8_midpoint)
-  ) %>%
+  #  mutate(
+  #   ct1_midpoint = if_else(is.na(ct1_midpoint), -99, ct1_midpoint),
+  #   ct2_midpoint = if_else(is.na(ct2_midpoint), -99, ct2_midpoint),
+  #   ct7_midpoint = if_else(is.na(ct7_midpoint), -99, ct7_midpoint),
+  #   ct8_midpoint = if_else(is.na(ct8_midpoint), -99, ct8_midpoint)
+  # ) %>%
   rename_with(~ ifelse(substr(., 1, 2) == "ct" & substr(., 1, 3) != "cts", paste0("cts", substr(., 3, nchar(.))), .), starts_with("ct"))
   
   
